--- a/results-summary-component-main/index.html
+++ b/results-summary-component-main/index.html
@@ -20,7 +20,7 @@
         <p class="big" >76</p>
         <p class="small" >of 100</p>
       </div>
-      <h1>Great</h1>
+      <h1> Hello Great</h1>
       <p>You scored higher than 65% of the people who have taken these tests.</p>
       </div>
       
